objects/Asset.object
<CustomObject>
    <fields>
        <fullName>PT_Special_QA_Inspection__c</fullName>
        <label>Special QA Inspection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Airbus Source</fullName>
                </value>
                <value>
                    <fullName>Airbus Yellow Tag</fullName>
                </value>
                <value>
                    <fullName>Any/PMAConformity</fullName>
                </value>
                <value>
                    <fullName>Boeing FAA 8130-3</fullName>
                </value>
                <value>
                    <fullName>Boeing Source</fullName>
                </value>
                <value>
                    <fullName>COC</fullName>
                </value>
                <value>
                    <fullName>COC, CX, Wt. Guarantee</fullName>
                </value>
                <value>
                    <fullName>CONFIGURE PER THE -501 SHIP CONFIGURATION ITEM</fullName>
                </value>
                <value>
                    <fullName>FAA 8130-3 Tag</fullName>
                </value>
                <value>
                    <fullName>FAA Conformity</fullName>
                </value>
                <value>
                    <fullName>FAA 8130-3, CX Wt Guar</fullName>
                </value>
                <value>
                    <fullName>FAA Conform;CX, WtGuar</fullName>
                </value>
                <value>
                    <fullName>Form 1 Appr Data</fullName>
                </value>
                <value>
                    <fullName>Form1 NonAppr Data</fullName>
                </value>
                <value>
                    <fullName>Highest Cert Avail.</fullName>
                </value>
                <value>
                    <fullName>Highest Cert and Cathay Wt. Guarantee</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>N/A; CX Wt Guarantee</fullName>
                </value>
                <value>
                    <fullName>PMA A/C Specific</fullName>
                </value>
                <value>
                    <fullName>PMA Any A/C</fullName>
                </value>
                <value>
                    <fullName>PMA Any Airbus A/C</fullName>
                </value>
                <value>
                    <fullName>PMA Any Boeing A/C</fullName>
                </value>
                <value>
                    <fullName>Uses/SvcbleRTS8130-3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Status__c</fullName>
        <label>PT Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Pending Replaced</fullName>
                </value>
                <value>
                    <fullName>Reinitialized</fullName>
                </value>
                <value>
                    <fullName>Pending Removed</fullName>
                </value>
                <value>
                    <fullName>Pending Move</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Supply_Available_Date__c</fullName>
        <label>Supply Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_Supply_Type__c</fullName>
        <label>Supply Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Discreet Job</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Planned Order</fullName>
                </value>
                <value>
                    <fullName>PO in Receiving</fullName>
                </value>
                <value>
                    <fullName>Purchase Order</fullName>
                </value>
                <value>
                    <fullName>Requisition</fullName>
                </value>
                <value>
                    <fullName>WIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_System_Type__c</fullName>
        <label>System Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Tail_Number__c</fullName>
        <label>Tail #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Total_Order_Quantity__c</fullName>
        <description>This field will be populated via code to inform the Order Administrator the total quantity of all cloned (child) assets</description>
        <label>Total Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Use_D1_Date__c</fullName>
        <defaultValue>&#39;Yes&#39;</defaultValue>
        <label>Use D1 Date?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_Warehouse__c</fullName>
        <label>NonDefault Conforming Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BOT</fullName>
                </value>
                <value>
                    <fullName>GLO</fullName>
                </value>
                <value>
                    <fullName>IRV</fullName>
                </value>
                <value>
                    <fullName>BRP</fullName>
                </value>
                <value>
                    <fullName>LRP</fullName>
                </value>
                <value>
                    <fullName>DRP</fullName>
                </value>
                <value>
                    <fullName>SRP</fullName>
                </value>
                <value>
                    <fullName>DLR</fullName>
                </value>
                <value>
                    <fullName>TRP</fullName>
                </value>
                <value>
                    <fullName>DSP</fullName>
                </value>
                <value>
                    <fullName>MMS</fullName>
                </value>
                <value>
                    <fullName>COW</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>OST</fullName>
                </value>
                <value>
                    <fullName>RTN</fullName>
                </value>
                <value>
                    <fullName>OSA</fullName>
                </value>
                <value>
                    <fullName>ORP</fullName>
                </value>
                <value>
                    <fullName>CAR</fullName>
                </value>
                <value>
                    <fullName>PTS</fullName>
                </value>
                <value>
                    <fullName>DSO</fullName>
                </value>
                <value>
                    <fullName>BUY</fullName>
                </value>
                <value>
                    <fullName>SYR</fullName>
                </value>
                <value>
                    <fullName>DUB</fullName>
                </value>
                <value>
                    <fullName>DEV</fullName>
                </value>
                <value>
                    <fullName>LON</fullName>
                </value>
                <value>
                    <fullName>LFR</fullName>
                </value>
                <value>
                    <fullName>PWS</fullName>
                </value>
                <value>
                    <fullName>PRC</fullName>
                </value>
                <value>
                    <fullName>NRP</fullName>
                </value>
                <value>
                    <fullName>ELF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PT_hasMRODchange__c</fullName>
        <formula>IF( AND( ISBLANK(PT_Pending__c), ISBLANK( PT_Airbus_D1_Date__c )),false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>has mrod change</inlineHelpText>
        <label>hasMRODchange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_inPL_approval__c</fullName>
        <formula>IF(ISPICKVAL(PT_Install_Location__r.Part_List_Opportunity__r.PT_PL_Approval_Status__c, &quot;Pending&quot;)
  ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Asset in Parts List approval</inlineHelpText>
        <label>inPL_approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_isApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_xx_Warehouse_Text__c</fullName>
        <description>This field is used to replicate the Warehouse field and store it as text. This is used in PMA Lead Time formula field to overcome formula length limitation.</description>
        <label>xx_Warehouse_Text</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipped__c</fullName>
        <label>Shipped</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ship</fullName>
                </value>
                <value>
                    <fullName>No Ship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipset_PPL_Link__c</fullName>
        <description>Link to Shipset / PPL of this Asset</description>
        <formula>IF(isPTAsset__c
,HYPERLINK( &quot;/&quot; + 
  IF(ISBLANK(PT_Install_Location__r.ShipSet__c)
    ,PT_Install_Location__r.Part_List_Opportunity__c
    ,PT_Install_Location__r.ShipSet__c
  )
  ,PT_Install_Location_Parent__c 
 )
,&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to Shipset / PPL of this Asset</inlineHelpText>
        <label>Shipset/PPL Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>canBulkChangePendingMROD__c</fullName>
        <description>Boolean to identify assets where the Pending MROD date will be updatable when changing the related Install Location Pending MROD date</description>
        <formula>IF( OR(ISBLANK( PT_Install_Location__c ), ISBLANK( Quantity), Quantity = 0), false
, IF(OR(PT_MROD__c=PT_Install_Location__r.MROD__c,AND(ISBLANK(PT_MROD__c),ISBLANK(PT_Install_Location__r.MROD__c))) , true, false )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Boolean to identify assets where the Pending MROD date will be updatable when changing the related Install Location Pending MROD date</inlineHelpText>
        <label>canBulkChangePendingMROD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isActiveProgram__c</fullName>
        <formula>IF( ISPICKVAL(PT_Program__r.PT_isActive__c,&#39;Active&#39;) ,
 IF(  ISPICKVAL(PT_Install_Location__r.Part_List_Opportunity__r.StageName , &#39;Delivery&#39;),true,false)
 ,false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isActiveProgram</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPTAsset__c</fullName>
        <formula>NOT(
 AND(ISBLANK(PT_Install_Location__c)
 ,ISBLANK(PT_Install_Location__r.ShipSet__c)
 ,ISBLANK(PT_Install_Location__r.Part_List_Opportunity__c)
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isPTAsset</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_populate_on_Parent_asset_lookup</fullName>
        <active>true</active>
        <description>This error will be displayed if the user attempts in input a value on the Order Quantity field on the Parent asset</description>
        <errorConditionFormula>ISCHANGED(PT_Order_Quantity__c) &amp;&amp; ISBLANK(PT_Case__c)</errorConditionFormula>
        <errorDisplayField>PT_Order_Quantity__c</errorDisplayField>
        <errorMessage>Order Quantity can only be updated on the Child Asset level</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Conformity_not_allowed_on_Prod_Prog_Type</fullName>
        <active>true</active>
        <errorConditionFormula>BEGINS(PT_Program__r.PT_Program_Type__c, &quot;Production&quot;) &amp;&amp; ISPICKVAL(PT_Conformity_Overwritten__c, &quot;Yes&quot;)</errorConditionFormula>
        <errorMessage>Conformity can not be true or overwritten when Program Type is Production</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_Asset_updates</fullName>
        <active>false</active>
        <description>Asset updates not allowed when related Order Product is NOT in a Status of &quot;Booked&quot;, &quot;Entered&quot; or &quot;Awaiting shipping&quot;</description>
        <errorConditionFormula>/*OR(
SBQQ__OrderProduct__r.PT_Ext_Order_Line_Status__c =  &quot;Booked&quot;,*/
		/*SBQQ__OrderProduct__r.PT_Ext_Order_Line_Status__c = &quot;Entered&quot;,*/
			/*	&quot;&quot;SBQQ__OrderProduct__r.PT_Ext_Order_Line_Status__c =	&quot;Awaiting shipping&quot;*/
				
		AND(		
						 ISBLANK(PT_Ship_to_Location__c ))</errorConditionFormula>
        <errorMessage>Updates are no longer allowed for this Part as it has been closed in Oracle</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_Qty_Cannot_be_less_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>PT_Order_Quantity__c &lt;   0</errorConditionFormula>
        <errorDisplayField>PT_Order_Quantity__c</errorDisplayField>
        <errorMessage>Order Quantity cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_Qty_must_be_less_Available_Qt</fullName>
        <active>false</active>
        <errorConditionFormula>PT_Order_Quantity__c &gt; Parent.PT_Available_Quantity__c</errorConditionFormula>
        <errorDisplayField>PT_Order_Quantity__c</errorDisplayField>
        <errorMessage>Inputted Order Quantity results in a total that is greater than the remaining Available Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PT_Prevent_Asset_update_OrderClosed_Case</fullName>
        <active>true</active>
        <description>Assets cannot be updated when the associated Customer PO Case is in a Status of &quot;Order Closed&quot;</description>
        <errorConditionFormula>AND(
ISPICKVAL(PT_Case__r.Status, &quot;Order Closed&quot;),
ISPICKVAL( PT_Case__r.PO_Case_Type__c, &quot;IFEC&quot;),
NOT( ISBLANK( 				 PT_Case__c )),
NOT (ISBLANK(ParentId)))</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>This Asset cannot be updated because it is related to a Customer PO Case that is in a Status of &quot;Order Closed&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Update_Order_Product_is_Closed</fullName>
        <active>true</active>
        <description>Prevent Asset Update if Related Order Product is Closed (Oracle Status)</description>
        <errorConditionFormula>OR(UPPER(PT_Oracle_Line_Status__c) = &quot;CANCELLED&quot;, UPPER(PT_Oracle_Line_Status__c) = &quot;CLOSED&quot;, UPPER(PT_Oracle_Line_Status__c) = &quot;FULFILLED&quot;, UPPER(PT_Oracle_Line_Status__c) = &quot;PICKED&quot;, UPPER(PT_Oracle_Line_Status__c) = &quot;PICKED_PARTIAL&quot;, UPPER(PT_Oracle_Line_Status__c) = &quot;SHIPPED&quot;, UPPER(PT_Oracle_Line_Status__c) = &quot;AWAITING_EXPORT_SCREENING&quot;, UPPER(PT_Oracle_Line_Status__c) = &quot;RELEASED_TO_WAREHOUSE&quot;, UPPER(PT_Oracle_Line_Status__c) = &quot;PENDING_APPROVAL&quot;, UPPER(PT_Oracle_Line_Status__c) = &quot;APPROVED&quot;, UPPER(PT_Oracle_Line_Status__c) = &quot;INVOICE_HOLD&quot;)
 
&amp;&amp;
 
OR(ISCHANGED(PT_Order_Quantity__c), ISCHANGED(PT_Warehouse__c), ISCHANGED(PT_Line_Type__c), ISCHANGED(PT_Customer_PO_Line__c), ISCHANGED(PT_Customer_PO_Request_Date__c), ISCHANGED(PT_Reference_PO__c), ISCHANGED(PT_Reference_PO_Request_Date__c), ISCHANGED(PT_LF_Software_Supply_Date__c), ISCHANGED(PT_Ship_to_Location__c), ISCHANGED(PT_Additional_AR_Invoice_Notes__c), ISCHANGED(PT_Comments__c))</errorConditionFormula>
        <errorMessage>Updates are no longer allowed for this Part as it has been closed in Oracle</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Qty_cannot_be_greater_than_Config_Qty</fullName>
        <active>false</active>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot; ,
OR ( AND (NOT(ISBLANK(PT_Pending_Quantity__c)), NOT(ISBLANK(PT_Pending_Configured_Quantity__c)), PT_Pending_Quantity__c  &gt;  PT_Pending_Configured_Quantity__c),
     AND (NOT(ISBLANK(PT_Pending_Quantity__c)), ISBLANK(PT_Pending_Configured_Quantity__c)) )
     )</errorConditionFormula>
        <errorMessage>Quantity cannot be greater than Configured Quantity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Order_Qty_cannot_exceed_Quantity</fullName>
        <active>true</active>
        <errorConditionFormula>/*ISCHANGED(PT_Order_Quantity__c) &amp;&amp;
Parent.PT_Total_Order_Quantity__c &gt; Parent.Quantity

!ISBLANK(ParentId) &amp;&amp; ISCHANGED(PT_Order_Quantity__c) &amp;&amp; IF(ISBLANK(Parent.PT_Total_Order_Quantity__c), 
(PT_Available_Quantity__c - PT_Order_Quantity__c) &lt; 0,
PT_Order_Quantity__c &gt; PT_Available_Quantity__c
)*/

!ISBLANK(ParentId) &amp;&amp; ISCHANGED(PT_Order_Quantity__c) &amp;&amp; IF(ISBLANK(Parent.PT_Total_Order_Quantity__c), 
(PT_Available_Quantity__c - PT_Order_Quantity__c) &lt; 0,
IF(ISBLANK(PRIORVALUE(PT_Order_Quantity__c)), 
(Parent.Quantity - (Parent.PT_Total_Order_Quantity__c + PT_Order_Quantity__c )) &lt; 0,
(Parent.Quantity - ((Parent.PT_Total_Order_Quantity__c - PRIORVALUE(PT_Order_Quantity__c)) + PT_Order_Quantity__c )) &lt; 0
))</errorConditionFormula>
        <errorDisplayField>PT_Order_Quantity__c</errorDisplayField>
        <errorMessage>Order Quantity cannot be greater than Available Quantity, please reduce Order Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Order_qty_not_more_than_available</fullName>
        <active>false</active>
        <errorConditionFormula>Parent.PT_Total_Order_Quantity__c  &gt;  Parent.PT_Available_Quantity__c</errorConditionFormula>
        <errorMessage>Total Order Quantity cannot be greater than the remaining available Quantity</errorMessage>
    </validationRules>
</CustomObject>